@@ -34,7 +34,7 @@ executable.
 </div>
 
 <DL>
-<DT><STRONG>2 May 2007</STRONG> 
+<DT><STRONG>17 June 2007</STRONG> 
 <DD>
 <UL>
 <LI>updated to the elsa stack svn repository, version May 2nd 2006
@@ -48,7 +48,7 @@ and a few additional fields in other nodes
 from int to int32)
 </LI>
 <LI>check_oast: new consistency checks of generated oast files:
-relying on the <A HREF="~/memcheck" >Memcheck Ocaml library</A>.
+relying on the <A HREF="/~tews/memcheck" >Memcheck Ocaml library</A>.
 </LI>
 <LI>new library function for reading oast files:
 Oast_header.unmarshal_oast
@@ -577,7 +577,7 @@ Elsa related.
 <DD>I was told that recent elsa versions are 64 bit clean now.
 However, not all
 <span style="color:#0048ff;"><STRONG>Olmar</STRONG></span>
-changes are not 64 bit clean. 
+changes are 64 bit clean. 
 <P>
 <DT>inefficiency on large graphs
 <DD>When generating the Ocaml tree every node in the C++ tree
@@ -611,7 +611,7 @@ runs fine with ocaml 3.10.
 
 <HR><FONT SIZE="-2">
 last changed on
-<!-- hhmts start -->17 Jun 2007
+<!-- hhmts start -->25 Jun 2007
 <!-- hhmts end -->
 by <A HREF="http://www.cs.ru.nl/~tews">Hendrik</A>
 </FONT></BODY> </HTML>
