@@ -16,7 +16,7 @@ I applied the ast_graph tool to the file
 With about 15.000 nodes and 21.000 edges its syntax tree is
 not really bit. However, it still big enough to get most viewer
 software into trouble. On the right hand side you see a small
-part of it (about 0.8%) reduced to a 2000x1580 pixels. The
+part of it (about 0.5%) reduced to a 2000x1743 pixels. The
 greyish something
 at the bottom of the page is the full tree, reduced to 8000x599.
 <P>
@@ -65,7 +65,7 @@ scrolling and sooming).
 <P>
 <FONT SIZE="-2">
 last changed on
-<!-- hhmts start --> 3 May 2007
+<!-- hhmts start -->25 Jun 2007
 <!-- hhmts end -->
 by <A HREF="/~tews">Hendrik</A>
 </FONT></BODY> </HTML>
