@@ -6,13 +6,13 @@
 <BODY>
 <H1>Olmar releases</H1>
 
-<A HREF="http://www.cs.ru.nl/~tews/olmar/elsa-9-491-282-1045-2476-olmar-2007-05-21.tar.gz">elsa-9-491-282-1045-2476-olmar-2007-05-21.tar.gz</A>
+<A HREF="http://www.cs.ru.nl/~tews/olmar/releases/elsa-9-491-282-1045-2476-olmar-2007-06-17.tar.gz">elsa-9-491-282-1045-2476-olmar-2007-06-17.tar.gz</A>
 <P>
 
-<A HREF="http://www.cs.ru.nl/~tews/olmar/elsa-2005.08.22b-olmar-2006.10.30.tar.gz">elsa-2005.08.22b-olmar-2006.10.30.tar.gz</A>
+<A HREF="http://www.cs.ru.nl/~tews/olmar/releases/elsa-2005.08.22b-olmar-2006.10.30.tar.gz">elsa-2005.08.22b-olmar-2006.10.30.tar.gz</A>
 <P>
 
-<A HREF="http://www.cs.ru.nl/~tews/olmar/elsa-2005.08.22b-olmar-2006.09.07.tar.gz">elsa-2005.08.22b-olmar-2006.09.07.tar.gz</A>
+<A HREF="http://www.cs.ru.nl/~tews/olmar/releases/elsa-2005.08.22b-olmar-2006.09.07.tar.gz">elsa-2005.08.22b-olmar-2006.09.07.tar.gz</A>
 
 <P>
 
@@ -20,7 +20,7 @@ The first two <span style="color:#0048ff;"><STRONG>Olmar</STRONG></span>
 versions had a simple name scheme:
 elsa-releasedate-olmar-releasedate.
 <P>
-Since I track the elsa-stack subversion repository thing became
+Since I track the elsa-stack subversion repository it became
 complicated:
 The numbers between elsa and olmar are the elsa-stack svn
 repository versions in the following order: elsa-stack, smbase,
@@ -29,7 +29,7 @@ in the format yyyy-mm-dd.
 
 <HR><FONT SIZE="-2">
 last changed on
-<!-- hhmts start -->10 Jun 2007
+<!-- hhmts start -->25 Jun 2007
 <!-- hhmts end -->
 by <A HREF="/~tews">Hendrik</A>
 </FONT></BODY> </HTML>
